syntax = "proto3";

package tasks;

option go_package = "service/pb;pb";

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
  rpc FindTasks (FindTasksRequest) returns (FindTasksResponse);
}

message Task {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message CreateTaskResponse {
  int32 id = 1;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}
message ListTasksRequest{}

message FindTasksRequest {
  int32 id = 1;
}

message FindTasksResponse {
  repeated Task tasks = 1;
}
